--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Mahjong for my mother",
   "scripts": {
     "postinstall": "util/copylibs",
+    "test": "karma start karma.conf.js",
+    "test-single-run": "karma start karma.conf.js  --single-run",
     "start": "http-server -a localhost -p 8000 -c-1"
   },
   "repository": {
@@ -21,6 +23,11 @@
   },
   "dependencies": {
     "http-server": "^0.6.1",
-    "jquery": "^2.2.4"
+    "jasmine-core": "^2.4.1",
+    "jquery": "^2.2.4",
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2"
   }
 }
